--- a/src/scss/ui/header/_header.scss
+++ b/src/scss/ui/header/_header.scss
@@ -4,7 +4,7 @@
 .header {
     margin-top: 9rem;
     min-height: 50rem;
-    background-image: url(../img/grafico.svg), url(../img/grafico.svg), linear-gradient(to right, rgba(v.$negro, 1), rgba(v.$negro, 0.5)), image-set(url(../img/header.avif) 1x, url(../img/header.webp) 1x, url(../img/header.jpg) 1x);
+    background-image: url(/build/img/grafico.svg), url(/build/img/grafico.svg), linear-gradient(to right, rgba(v.$negro, 1), rgba(v.$negro, 0.5)), image-set(url(/build/img/header.avif) 1x, url(/build/img/header.webp) 1x, url(/build/img/header.jpg) 1x);
 
     background-repeat: no-repeat;
     background-size: 400px, 400px, cover, cover;   
